# aurora

./: .gitignore  Cargo.toml  DOCUMENTATION_TODO.md  Readme.md  STUDY_SUMMARY.md  aurora_baseline_20251108_094626.txt  aurora_baseline_20251108_100140.txt  aurora_baseline_20251108_101322.txt  run_all_benchmarks.sh  run_benchmarks.sh  run_benchmarks_debug.sh
.cargo/: config.toml
benches/: aurora_benchmarks.rs  aurora_vs_sqlite.rs  baseline_benchmark.rs  comparative_benchmark.rs  comparative_fluent_benchmark.rs
examples/: Cargo.toml  aql_showcase.rs  baseline_benchmark.rs  client.rs  contains_query_demo.rs  fleet_monitor.rs  full_stack_showcase.rs  index_demo.rs  indexing_performance.rs  performance_demo.rs  pubsub_demo.rs  range_query_demo.rs  reactive_demo.rs  rehydrate_test.rs  schema_migration.rs  showcase.rs  stress_test_1m.rs  upsert_vs_insert.rs
src/: audit.rs  client.rs  computed.rs  db.rs  error.rs  index.rs  lib.rs  macros.rs  main.rs  query.rs  search.rs  transaction.rs  types.rs
src/docs/: computed-fields.md  crud.md  docs.md  performance.md  pubsub.md  querying.md  reactive.md  schema.md  workers.md
src/network/: http_models.rs  http_server.rs  mod.rs  protocol.rs  server.rs
src/parser/: ast.rs  executor.rs  executor_utils.rs  grammar.pest  mod.rs  validator.rs
src/pubsub/: channel.rs  events.rs  listener.rs  mod.rs  pubsub.md
src/reactive/: mod.rs  reactive.md  updates.rs  watcher.rs
src/storage/: cold.rs  hot.rs  index_storage.rs  mod.rs  write_buffer.rs
src/wal/: log.rs  mod.rs
src/workers/: executor.rs  job.rs  mod.rs  queue.rs
tests/: aggregation_tests.rs  aql_e2e_comprehensive.rs  aql_error_reporting.rs  aql_feature_tests.rs  aql_security_tests.rs  aql_showcase_test.rs  aql_validation_tests.rs  aurora_baseline_v2.rs  bulk_ops_watch_test.rs  change_fingerprint_tests.rs  concurrency_tests.rs  core_stress_bench.rs  crash_recovery_tests.rs  durability_stress_test.rs  execute_api_tests.rs  fluent_vs_aql_parity.rs  fragment_execution_test.rs  fragment_validation_test.rs  fuzzy_search_test.rs  groupby_tests.rs  insertmany_transaction_test.rs  job_and_handler_tests.rs  macro_test.rs  memory_1m_test.rs  memory_and_error_tests.rs  migration_tests.rs  nested_validation_test.rs  new_operators_test.rs  pagination_stress_test.rs  pagination_tests.rs  performance_comparison.rs  pubsub_advanced_tests.rs  pubsub_fanout_test.rs  query_integration.rs  query_tests.rs  reactive_extreme_test.rs  reactive_performance_test.rs  repro_transaction_bug.rs  rich_query_tests.rs  stress_test.rs  (+6 more)
