[package]
name = "aurora-db"
version = "5.1.0"
edition = "2024"
authors = ["Bethel Nzekea <bethelnzekea@gmail.com>"]
description = "A lightweight, real-time embedded database with built-in PubSub, reactive queries, background workers, and intelligent caching."
license = "MIT"
keywords = ["database", "embedded", "realtime", "pubsub", "reactive"]
categories = ["database", "caching"]
readme = "README.md"
repository = "https://github.com/bethel-nz/aurora"
homepage = "https://github.com/bethel-nz/aurora"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.2", features = ["full"] }
dashmap = "5.3.4"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

unicode-segmentation = "1.10.0"
tempfile = "3.3.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
zip = "0.6.2"
sled = "0.34.7"
bincode = "1.3"
regex = "1.11.1"
criterion = "0.5.1"
anyhow = "1.0"
base64 = "0.22"
zstd = "0.13"
actix-web = { version = "4.11.0", optional = true }
fst = { version = "0.4", features = ["levenshtein"] }

# AQL Dependencies
pest = "2.7.15"
pest_derive = "2.7.15"
moka = { version = "0.12", features = ["future", "sync"] }
rhai = { version = "1.19", features = ["serde", "metadata", "sync"] }
rmp-serde = "1.3"
roaring = { version = "0.10", features = ["serde"] }
crossbeam-skiplist = "0.1"
memmap2 = "0.9"
rkyv = { version = "0.7.46", features = ["validation", "uuid"] }
bumpalo = "3.16"
async-stream = "0.3"
quote = "1.0"
color-eyre = "0.6"
futures = "0.3"

# Future features
ndarray = "0.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3.0"
rand = "0.8"
rusqlite = "0.30"

[features]
default = []
compression = []
full-text-search = []
binary = []
http = ["dep:actix-web"]
full = ["binary", "http"]

[[example]]
name = "contains_query_demo"
path = "examples/contains_query_demo.rs"

[[example]]
name = "reactive_demo"
path = "examples/reactive_demo.rs"

[[bench]]
name = "aurora_benchmarks"
harness = false

[[bench]]
name = "baseline_benchmark"
harness = false

# [[bench]]
# name = "aurora_vs_sqlite"
# harness = false

[profile.dev.package."*"]
opt-level = 0
debug = 0
strip = "debuginfo"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

# Reduce debug info for tests to avoid Windows 65k section limit
[profile.test]
debug = 1
incremental = true
